# glucose_media_player

./: .gitattributes  .gitignore  AI_SUBTITLES_SETUP.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEATURES.md  IMPLEMENTATION_SUMMARY.md  LICENSE.FI  README.md  SECURITY.md  SHORTCUTS.md  SUBTITLE_FEATURE.md  constants.json  package.json  pnpm-lock.yaml  svelte.config.js  test-subtitles.html  vite.config.ts
.claude/: settings.local.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  release.yml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json  windows.json
src-tauri/icons/: icon.icns
src-tauri/src/: ffmpeg.rs  lib.rs  pip_window.rs  storage.rs
src/lib/: theme.json
src/lib/components/: Button.svelte  FFmpegSettings.svelte  LibrarySettings.svelte  PipWindowFrame.svelte  PlayerPreferencesPicker.svelte  UpdateManager.svelte  UpdateNotification.svelte
src/lib/stores/: appStore.ts  updateStore.ts  watchProgressStore.ts
src/lib/styles/: global.css
src/lib/subtitle/: SubtitleOverlay.svelte  SubtitleStylePanel.svelte  subtitlePresets.ts  subtitleStyleStore.ts  vttParser.ts
src/lib/types/: video.ts
src/lib/utils/: fadedMediaPlayback.ts  mediaType.ts  pipWindow.ts  playerPreferences.ts  subtitles.ts  thumbnail.ts  time.ts  version.ts  windowChrome.ts  windowTitle.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/audio/[audioPath]/: +page.svelte  +page.ts
src/routes/player/[videoPath]/: +page.svelte  +page.ts
static/fonts/: fonts.css
