[package]
name = "glucose"
version = "3.6.0"
description = "A minimalist video player"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant, but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "glucose_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["protocol-asset"] }
tauri-plugin-opener = "2.5.3"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-process = "2.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0.1"
urlencoding = "2.1.3"
# AI subtitle generation deps — commented out for Mac App Store submission.
# Uncomment along with the AI code in src/lib.rs to re-enable.
# whisper-rs = "0.16.0"
tokio = { version = "1.51.0", features = ["full"] }
# reqwest = { version = "0.13.2", features = ["stream"] }
# futures-util = "0.3.32"
anyhow = "1.0"
fs4 = "1"

[target.'cfg(target_os = "windows")'.dependencies]
tauri-plugin-updater = "2.10.0"

[target.'cfg(target_os = "macos")'.dependencies]
base64 = "0.22.1"
objc2 = "0.6.4"
objc2-foundation = { version = "0.3.2", default-features = false, features = ["std", "NSArray", "NSData", "NSError", "NSObject", "NSString", "NSURL"] }
